[package]
name = "noise-functions-playground"
version = "0.0.0"
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.82.0"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = "0.30.0"
eframe = { version = "0.30.0", features = ["persistence"] }
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
noise-functions = { git = "https://github.com/bluurryy/noise-functions" }
egui-snarl = { version = "0.6.0", features = ["serde"] }
git-version = "0.3.9"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["Window", "CacheStorage"] }

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
